--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- info -->
-    <groupId>com.chartsbot</groupId>
-    <artifactId>blockchain-scrapper</artifactId>
+    <groupId>com.chartsbot.blockhain-scrapper</groupId>
+    <artifactId>parent</artifactId>
     <version>0.1.0</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>bch-blocks-indexer</module>
+        <module>bch-watcher</module>
+    </modules>
 
     <organization>
         <name>ChartsBot</name>
@@ -34,271 +39,24 @@
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
 
-        <!-- versions -->
-
-        <scala.logging.version>3.9.2</scala.logging.version>
-        <typesafe.config>1.4.1</typesafe.config>
-        <slf4j-api.version>1.7.25</slf4j-api.version>
-        <scala-logging.version>3.9.2</scala-logging.version>
-        <logback-classic.version>1.2.3</logback-classic.version>
-        <logstash-logback-encoder.version>5.3</logstash-logback-encoder.version>
-
         <scala.version>2.12.8</scala.version>
         <scala.compact.version>2.12</scala.compact.version>
 
-        <scalatest.version>3.2.3</scalatest.version>
-        <scalactic.version>3.2.3</scalactic.version>
-
-
-        <javaxServlet.version>3.1.0</javaxServlet.version>
-
-        <json4s.version>3.6.7</json4s.version>
-        <resteasy.version>3.6.3.Final</resteasy.version>
-
-        <build.number>${timestamp}-dev</build.number>
-
         <!-- plugins -->
         <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
-        <scalariform.version>0.2.2</scalariform.version>
         <scala-maven-plugin.version>3.3.2</scala-maven-plugin.version>
         <maven-surefire-plugin.version>2.7</maven-surefire-plugin.version>
-        <scalatest-maven-plugin.version>1.0</scalatest-maven-plugin.version>
-        <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
-        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-        <dockerfile-maven-plugin.version>1.4.4</dockerfile-maven-plugin.version>
-        <!-- /plugins -->
-
-        <!-- /versions -->
-
-        <jwt-core.version>3.1.0</jwt-core.version>
-        <jose4j.version>0.6.5</jose4j.version>
-
-        <jetty-servlets.version>9.4.19.v20190610</jetty-servlets.version>
-
-        <guice.version>4.2.3</guice.version>
-
-        <quill.version>3.6.0</quill.version>
-
-        <akka.version>2.6.10</akka.version>
-        <akka.http.version>10.2.0</akka.http.version>
-
 
     </properties>
 
 
     <dependencies>
         <!-- Scala -->
-
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
-
-        <!-- Scala -->
-
-        <!-- Logging -->
-        <dependency>
-            <groupId>com.typesafe.scala-logging</groupId>
-            <artifactId>scala-logging_${scala.compact.version}</artifactId>
-            <version>${scala.logging.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.typesafe</groupId>
-            <artifactId>config</artifactId>
-            <version>${typesafe.config}</version>
-        </dependency>
-
-
-        <!-- region the underlying logging framework -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-api.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback-classic.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.logstash.logback</groupId>
-            <artifactId>logstash-logback-encoder</artifactId>
-            <version>${logstash-logback-encoder.version}</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.9.10.6</version>
-        </dependency>
-
-        <!-- /Logging -->
-
-        <!-- Json4s -->
-
-        <dependency>
-            <groupId>org.json4s</groupId>
-            <artifactId>json4s-native_${scala.compact.version}</artifactId>
-            <version>${json4s.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.json4s</groupId>
-            <artifactId>json4s-jackson_${scala.compact.version}</artifactId>
-            <version>${json4s.version}</version>
-        </dependency>
-
-        <!-- /Json4s -->
-
-
-        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest -->
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.12</artifactId>
-            <version>${scalatest.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-
-        <dependency>
-            <groupId>org.scalactic</groupId>
-            <artifactId>scalactic_${scala.compact.version}</artifactId>
-            <version>${scalactic.version}</version>
-        </dependency>
-
-
-        <!-- https://mvnrepository.com/artifact/io.getquill/quill-core -->
-        <dependency>
-            <groupId>io.getquill</groupId>
-            <artifactId>quill-core_2.12</artifactId>
-            <version>${quill.version}</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/io.getquill/quill-jdbc -->
-        <dependency>
-            <groupId>io.getquill</groupId>
-            <artifactId>quill-jdbc_2.12</artifactId>
-            <version>${quill.version}</version>
-        </dependency>
-
-
-        <!-- https://mvnrepository.com/artifact/io.getquill/quill-async-mysql -->
-        <dependency>
-            <groupId>io.getquill</groupId>
-            <artifactId>quill-async-mysql_2.12</artifactId>
-            <version>${quill.version}</version>
-        </dependency>
-
-
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/mysql/mysql-connector-java &ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>mysql</groupId>-->
-        <!--            <artifactId>mysql-connector-java</artifactId>-->
-        <!--            <version>8.0.22</version>-->
-        <!--        </dependency>-->
-
-        <!--        TEST embedded mysql-->
-
-        <dependency>
-            <groupId>com.wix</groupId>
-            <artifactId>wix-embedded-mysql</artifactId>
-            <version>4.6.1</version>
-        </dependency>
-
-
-        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
-        <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
-            <version>2.7.1</version>
-        </dependency>
-
-
-
-        <!-- Guice -->
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>${guice.version}</version>
-        </dependency>
-
-
-        <!-- akka -->
-
-        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-stream -->
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-stream_2.12</artifactId>
-            <version>${akka.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-testkit_2.12</artifactId>
-            <version>${akka.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor-typed_2.12</artifactId>
-            <version>${akka.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-discovery_2.12</artifactId>
-            <version>${akka.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-pki_2.12</artifactId>
-            <version>${akka.version}</version>
-        </dependency>
-
-        <!-- // The Akka HTTP overwrites are required because Akka-gRPC depends on 10.1.x -->
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-http-core_${scala.compact.version}</artifactId>
-            <version>${akka.http.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-http_${scala.compact.version}</artifactId>
-            <version>${akka.http.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-http2-support_${scala.compact.version}</artifactId>
-            <version>${akka.http.version}</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor-testkit-typed_${scala.compact.version}</artifactId>
-            <version>${akka.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-stream-testkit_${scala.compact.version}</artifactId>
-            <version>${akka.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- web3 -->
-        <dependency>
-            <groupId>org.web3j</groupId>
-            <artifactId>core</artifactId>
-            <version>4.8.4</version>
-        </dependency>
-
-
-
     </dependencies>
 
     <licenses>
@@ -391,36 +149,6 @@
                 </configuration>
             </plugin>
 
-            <!-- code formatting -->
-            <plugin>
-                <groupId>com.github.tashoyan</groupId>
-                <artifactId>scalariform-maven-plugin</artifactId>
-                <version>${scalariform.version}</version>
-                <executions>
-                    <execution>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>format</goal>
-                        </goals>
-                        <configuration>
-                            <firstArgumentOnNewline>Force</firstArgumentOnNewline>
-                            <firstParameterOnNewline>Force</firstParameterOnNewline>
-                            <allowParamGroupsOnNewlines>true</allowParamGroupsOnNewlines>
-                            <danglingCloseParenthesis>Force</danglingCloseParenthesis>
-                            <doubleIndentConstructorArguments>true</doubleIndentConstructorArguments>
-                            <doubleIndentMethodDeclaration>true</doubleIndentMethodDeclaration>
-                            <newlineAtEndOfFile>true</newlineAtEndOfFile>
-                            <placeScaladocAsterisksBeneathSecondAsterisk>true
-                            </placeScaladocAsterisksBeneathSecondAsterisk>
-                            <singleCasePatternOnNewline>false</singleCasePatternOnNewline>
-                            <spacesAroundMultiImports>true</spacesAroundMultiImports>
-                            <rewriteArrowSymbols>false</rewriteArrowSymbols>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- code formatting -->
-
             <!-- disable surefire -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -444,46 +172,12 @@
                         <configuration>
                             <overWriteReleases>false</overWriteReleases>
                             <includeScope>runtime</includeScope>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                            <outputDirectory>../target/lib</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>org.scalatest</groupId>
-                <artifactId>scalatest-maven-plugin</artifactId>
-                <version>${scalatest-maven-plugin.version}</version>
-                <configuration>
-                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                    <junitxml>.</junitxml>
-                    <filereports>WDF TestSuite.txt</filereports>
-                    <skipTests>true</skipTests>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>test</id>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>${maven-jar-plugin.version}</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.chartsbot.Service</mainClass>
-                            <useUniqueVersions>false</useUniqueVersions>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
 
             <!-- for mvn deploy to work, disable the default deploy plugin -->
             <plugin>
@@ -494,76 +188,6 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <executions>
-                    <execution>
-                        <id>server</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-classpath</argument>
-                                <classpath />
-                                <argument>com.chartsbot.services.FileHandlerServer</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-
-
-                    <execution>
-                        <id>client</id>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>java</executable>
-                            <arguments>
-                                <argument>-classpath</argument>
-                                <classpath />
-                                <argument>com.chartsbot.Service</argument>
-                                <!--<argument>${TestClient.user}</argument>-->
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-
-            </plugin>
-
-            <!--             create and/or push the created docker image-->
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>${dockerfile-maven-plugin.version}</version>
-                <executions>
-                    <execution>
-                        <id>default</id>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>push</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <buildDirectory>${project.build.outputDirectory}</buildDirectory>
-                    <repository>fomoinc/fomobot-blockchain-scrapper</repository>
-                    <tag>${build.number}</tag>
-                    <tag>latest</tag>
-                    <buildArgs>
-                        <VERSION>${project.version}</VERSION>
-                        <BUILD>${build.number}</BUILD>
-                        <SERVICE_NAME>${project.name}</SERVICE_NAME>
-                        <JAR_LIBS>target/lib</JAR_LIBS>
-                        <JAR_FILE>target/${project.build.finalName}.${project.packaging}</JAR_FILE>
-                    </buildArgs>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
 
