--- a/bch-blocks-indexer/src/main/resources/application-docker.conf
+++ b/bch-blocks-indexer/src/main/resources/application-docker.conf
@@ -22,4 +22,11 @@ web3 {
             websocketUrl = ${BLOCKCHAIN_SCRAPPER_WEB3_POLYGON_CONN_WEBSOCK_URL}
         }
     }
+
+    bsc {
+        connection {
+            url = ${BLOCKCHAIN_SCRAPPER_WEB3_BSC_CONN_URL}
+            websocketUrl = ${BLOCKCHAIN_SCRAPPER_WEB3_BSC_CONN_WEBSOCK_URL}
+        }
+    }
 }
