--- a/bch-blocks-indexer/src/main/resources/application.base.conf
+++ b/bch-blocks-indexer/src/main/resources/application.base.conf
@@ -24,4 +24,11 @@ web3 {
             websocketUrl = "f"
         }
     }
+
+    bsc {
+        connection {
+            url = "url"
+            websocketUrl = "bnfbf"
+        }
+    }
 }
