--- a/bch-blocks-indexer/pom.xml
+++ b/bch-blocks-indexer/pom.xml
@@ -55,6 +55,9 @@
         <scalatest.version>3.2.3</scalatest.version>
         <scalactic.version>3.2.3</scalactic.version>
 
+        <scalatra.version>2.6.5</scalatra.version>
+        <scalatra-scalatest.version>2.6.5</scalatra-scalatest.version>
+
 
         <javaxServlet.version>3.1.0</javaxServlet.version>
 
@@ -300,7 +303,7 @@
         <dependency>
             <groupId>org.web3j</groupId>
             <artifactId>core</artifactId>
-            <version>4.8.7</version>
+            <version>4.8.9</version>
         </dependency>
 
 
@@ -325,6 +328,47 @@
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Scalatra -->
+        <dependency>
+            <groupId>org.scalatra</groupId>
+            <artifactId>scalatra_2.12</artifactId>
+            <version>${scalatra.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scalatra</groupId>
+            <artifactId>scalatra-json_2.12</artifactId>
+            <version>${scalatra.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scalatra</groupId>
+            <artifactId>scalatra-scalatest_${scala.compact.version}</artifactId>
+            <version>${scalatra-scalatest.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.scalactic</groupId>
+            <artifactId>scalactic_${scala.compact.version}</artifactId>
+            <version>${scalactic.version}</version>
+        </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>org.scalatra</groupId>-->
+        <!--            <artifactId>scalatra-swagger_${scala.compact.version}</artifactId>-->
+        <!--            <version>${scalatraSwagger.version}</version>-->
+        <!--        </dependency>-->
+
+        <!-- /Scalatra -->
+
+        <!-- Javax servlet -->
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javaxServlet.version}</version>
         </dependency>
 
 
