--- a/bch-blocks-indexer/src/main/resources/application-docker.conf
+++ b/bch-blocks-indexer/src/main/resources/application-docker.conf
@@ -30,3 +30,11 @@ web3 {
         }
     }
 }
+
+scalatra {
+    env = ${BLOCKCHAIN_SCRAPPER_SCALATRA_ENV}
+    port = ${BLOCKCHAIN_SCRAPPER_SCALATRA_PORT}
+    base_url = ${BLOCKCHAIN_SCRAPPER_SCALATRA_BASE_URL}
+    version = ${BLOCKCHAIN_SCRAPPER_SCALATRA_VERSION}
+
+}
