--- a/bch-blocks-indexer/src/main/resources/application-docker.conf
+++ b/bch-blocks-indexer/src/main/resources/application-docker.conf
@@ -29,6 +29,12 @@ web3 {
             websocketUrl = ${BLOCKCHAIN_SCRAPPER_WEB3_BSC_CONN_WEBSOCK_URL}
         }
     }
+    ftm {
+        connection {
+            url = ${BLOCKCHAIN_SCRAPPER_WEB3_FTM_CONN_URL}
+            websocketUrl = ${BLOCKCHAIN_SCRAPPER_WEB3_FTM_CONN_WEBSOCK_URL}
+        }
+    }
 }
 
 scalatra {
