--- a/bch-blocks-indexer/src/main/resources/application.base.conf
+++ b/bch-blocks-indexer/src/main/resources/application.base.conf
@@ -31,6 +31,12 @@ web3 {
             websocketUrl = "bnfbf"
         }
     }
+    ftm {
+        connection {
+            url = "url"
+            websocketUrl = "bnfbf"
+        }
+    }
 }
 
 scalatra {
